<resources>
    <string name="app_name">MyLvyouAPP</string>
    <string name="app_names">发现</string>
    <string name="app_wanzhuan">玩转</string>
    <string name="app_quanqiu">全球</string>
    <string name="app_tanxun">探寻</string>
    <string name="app_mudidi">目的地</string>
    <string name="app_xzmdd">选择目的地</string>
    <string name="app_sh">上海</string>
    <string name="app_cf">出发</string>
    <string name="app_xqd">兴趣点</string>
    <string name="app_cxsj">出行时间</string>
    <string name="app_gdph">更多偏好</string>
    <string name="app_cjy">出境游</string>
    <string name="app_dny">东南亚</string>
    <string name="app_gat">港澳台</string>
    <string name="app_rm">日蒙</string>
    <string name="app_mz">美洲</string>
    <string name="app_gny">国内游</string>
    <string name="app_hd">华东</string>
    <string name="app_hb">华北</string>
    <string name="app_hn">华南</string>
    <string name="app_hyh">换一换</string>
    <string name="app_ts">特色</string>
    <string name="app_pd">频道</string>
    <string name="app_wld">微领队</string>
    <string name="wld_nr">旅友互助交流</string>
    <string name="wld_nr2">领队贴心服务</string>
    <string name="app_lxgw">旅行顾问</string>
    <string name="lxgw_nr">旅行专家</string>
    <string name="lxgw_nr2">为您答疑解惑</string>
    <string name="app_dzlx">定制旅行</string>
    <string name="dzlx_nr">一站式服务</string>
    <string name="dzlx_nr2">定制专属行程</string>
    <string name="app_gjhcp">国际火车票</string>
    <string name="gjhcp_nr">坐火车看世界</string>
    <string name="gjhcp_nr2">体验不一样</string>

    <string name="dl">携程旅行帐号登录</string>
    <string name="tishi">用户名</string>
    <string name="mima">登录密码</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="wangjimima">忘记密码</string>
    <string name="dingdan">订单服务</string>
    <string name="zixun">出行帮助</string>
    <string name="err">账号密码错误</string>
    <string name="xingbie">性别</string>
    <string name="age">年龄</string>

    <string name="faxian">发现</string>
    <string name="xin">新的行程</string>
    <string name="out">退出登入</string>
    <string name="checi">车次详情</string>
    <string name="youpiao">有票</string>
    <string name="yuding">预订</string>
    <string name="window_paizhao">拍照</string>
    <string name="window_xiangce">从相册选择</string>
    <string name="window_quxiao">取消</string>
    <string name="huochepia">火车票</string>
    <string name="qichepia">汽车票</string>
    <string name="fenjipia">飞机票</string>
    <string name="tejiapia">特价票</string>

    <string name="chax">查询</string>

    <string name="cs">城市</string>
    <string name="qiang">抢票</string>
    <string name="hc">火车</string>
    <string name="fenj">飞机</string>
    <string name="qic">汽车</string>
    <string name="tj">特价票</string>

    <string name="jdian">酒店</string>
    <string name="hw">海外</string>
    <string name="tg">团购</string>
    <string name="zb">周边</string>
    <string name="gy">民宿·客栈</string>
    
    <string name="dongnanya">东南亚</string>
    <string name="gangaotai">港澳台</string>
    <string name="guonei">国内</string>
    <string name="meizhou">美洲</string>
    <string name="ouzhou">欧洲</string>
    <string name="rihan">日韩</string>

</resources>
