<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_names"
            android:textSize="30sp"
            android:gravity="center"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorGray"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_wanzhuan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv1"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_quanqiu"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="5"
                android:id="@+id/gv"
                android:horizontalSpacing="2dp"
                android:verticalSpacing="2dp"
                android:stretchMode="columnWidth">
            </GridView>
        </RelativeLayout>
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorGray"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_tanxun"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv2"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_mudidi"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/app_sh"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_toRightOf="@id/tv3"
                android:text="@string/app_cf"/>
            <View
                android:id="@+id/views"
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_toRightOf="@id/tv4"
                android:background="@color/colorAccent"/>
            <EditText
                android:id="@+id/sousuo_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv4"
                android:hint="@string/app_xzmdd"
                android:layout_marginLeft="5dp"
                android:drawableLeft="@mipmap/sousuo_fdj">
            </EditText>
        </RelativeLayout>
        <RadioGroup
            android:id="@+id/rg"
            style="@style/dibu_daohang"
            >
            <RadioButton
                android:id="@+id/shouye"
                style="@style/dibu_daohang_button"
                android:text="@string/app_mudidi"
                />
            <RadioButton
                android:id="@+id/fenlei"
                style="@style/dibu_daohang_button"
                android:text="@string/app_xqd"
                />
            <RadioButton
                android:id="@+id/gouwuche"
                style="@style/dibu_daohang_button"
                android:text="@string/app_cxsj"
                />
            <RadioButton
                android:id="@+id/wode"
                style="@style/dibu_daohang_button"
                android:textColor="@color/colorGray"
                android:text="@string/app_gdph"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mudidi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_cjy"/>
            <TextView
                android:id="@+id/mudidi_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/mudidi_tv"
                android:text="@string/app_dny"/>
            <TextView
                android:id="@+id/mudidi_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/mudidi_tv1"
                android:text="@string/app_gat"/>
            <TextView
                android:id="@+id/mudidi_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/mudidi_tv2"
                android:text="@string/app_rm"/>
            <TextView
                android:id="@+id/mudidi_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/mudidi_tv3"
                android:text="@string/app_mz"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mudidi_tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/mudidi_tv"
                android:text="@string/app_gny"/>
            <TextView
                android:id="@+id/mudidi_tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/mudidi_tv1"
                android:text="@string/app_hd"/>
            <TextView
                android:id="@+id/mudidi_tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/mudidi_tv2"
                android:text="@string/app_hb"/>
            <TextView
                android:id="@+id/mudidi_tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/mudidi_tv3"
                android:text="@string/app_hn"/>
            <TextView
                android:id="@+id/mudidi_tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/mudidi_tv4"
                android:text="@string/app_hyh"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorGray"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_ts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv5"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text="@string/app_pd"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:paddingLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/wld_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/app_wld"/>
                <TextView
                    android:id="@+id/wld_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wld_tv"
                    android:text="@string/wld_nr"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wld_tv2"
                    android:text="@string/wld_nr2"/>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toRightOf="@id/wld_tv2"
                    android:src="@mipmap/ic_launcher"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/lxgw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_lxgw"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lxgw_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lxgw_tv"
                    android:text="@string/lxgw_nr" />

                <TextView
                    android:id="@+id/lxgw_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lxgw_tv2"
                    android:text="@string/lxgw_nr2" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/lxgw_tv3"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:paddingLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/dzlx_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/app_dzlx"/>
                <TextView
                    android:id="@+id/dzlx_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dzlx_tv"
                    android:text="@string/dzlx_nr"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dzlx_tv2"
                    android:text="@string/dzlx_nr2"/>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toRightOf="@id/dzlx_tv"
                    android:src="@mipmap/ic_launcher"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/gjhcp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/app_gjhcp"/>
                <TextView
                    android:id="@+id/gjhcp_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gjhcp_tv"
                    android:text="@string/gjhcp_nr"/>
                <TextView
                    android:id="@+id/gjhcp_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gjhcp_tv2"
                    android:text="@string/gjhcp_nr2"/>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toRightOf="@id/gjhcp_tv2"
                    android:src="@mipmap/ic_launcher"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
