<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dl"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="85dp"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tishi"
            android:layout_marginTop="150dp"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mima"
            android:layout_marginTop="200dp"
            />
        <Button
            android:id="@+id/bt_dengru"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/denglu"
            android:layout_marginTop="250dp"
            />
        <TextView
            android:id="@+id/text_zhuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhuce"
            android:layout_marginTop="300dp"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wangjimima"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="300dp"
            android:textSize="15dp"
            />
    </RelativeLayout>


</LinearLayout>