<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/window_paizhao"
            android:text="@string/window_paizhao"
            style="@style/window"
/>
        <Button
            android:id="@+id/window_xiangce"
            android:text="@string/window_xiangce"
            style="@style/window"
            />
        <Button
            android:id="@+id/window_quxiao"
            android:text="@string/window_quxiao"
            style="@style/window"
            />

    </LinearLayout>

</RelativeLayout>
