<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tud_id_iten"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@color/colorAccent"/>

    <RadioGroup
        android:id="@+id/syxq_group1_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baise"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/id_hw"
            style="@style/ShouyeXiangQingg_RadioButton"
            android:text="@string/hw" />

        <RadioButton
            android:id="@+id/id_tg"
            style="@style/ShouyeXiangQingg_RadioButton"
            android:text="@string/tg" />

        <RadioButton
            android:id="@+id/id_tjjd"
            style="@style/ShouyeXiangQingg_RadioButton"
            android:text="@string/zb" />

        <RadioButton
            android:id="@+id/id_mskz"
            style="@style/ShouyeXiangQingg_RadioButton"
            android:text="@string/gy" />

    </RadioGroup>
    <!--<android.support.v4.view.ViewPager-->
    <!--android:id="@+id/syxq_pager_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--/>-->
    <TextView
        android:id="@+id/id_text1_shouyexiangqing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="35dp"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/cs_id_spinner1_layout"
            android:layout_alignParentLeft="true"

            />

        <TextView
            android:id="@+id/cs_id_text"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:text="入住天数"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_toRightOf="@id/cs_id_spinner1_layout"
             />
        <EditText
            android:id="@+id/cs_id_ed"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:text="3"
            android:inputType="number"/>
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn1_layout_item"
        android:background="@color/orange"
        android:text="@string/chax"/>


</LinearLayout>

